fix(menu): add bottom padding to menu only on mobile + scroll auto

--- a/src/modules/navigation/components/Navigation/Navigation.module.scss
+++ b/src/modules/navigation/components/Navigation/Navigation.module.scss
@@ -469,8 +469,11 @@ $c-navigation-decoration: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDo
 		:global(.c-menu) {
 			max-height: calc(100vh - $c-navigation-height);
 			overflow-x: hidden;
-			overflow-y: scroll;
-			padding-bottom: 10rem;
+			overflow-y: auto;
+
+			@include respond-to(md) {
+				padding-bottom: 10rem;
+			}
 		}
 
 		:global(.c-badge) {
